task8/final-exam-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: final-exam-service
  namespace: fayoz-final
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: final-exam
  type: ClusterIP
status:
  loadBalancer: {}
