task8/final-exam-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: final-exam-ingress
  namespace: fayoz-final
spec:
  ingressClassName: nginx
  rules:
  - host: ingress-f-absoatov.sts404.uz
    http:
      paths:
      - backend:
          service:
            name: final-exam-service
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
